--- a/MotorcycleAdventures/MotorcycleAdventures/MotorcycleAdventures.csproj
+++ b/MotorcycleAdventures/MotorcycleAdventures/MotorcycleAdventures.csproj
@@ -26,6 +26,9 @@
     <EmbeddedResource Update="Controls\HeaderView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\NewGoalPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\HomePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
